--- a/package.json
+++ b/package.json
@@ -14,31 +14,44 @@
     ]
   },
   "scripts": {
-    "lint": "yarn lint:scripts && yarn lint:formatting",
-    "lint:fix": "yarn lint:scripts --fix && yarn prettier --write .",
-    "lint:scripts": "yarn eslint .",
-    "lint:formatting": "yarn prettier --check .",
-    "test": "yarn workspaces run test",
-    "test:typecheck": "yarn workspaces run test:typecheck",
+    "reset": " git clean -Xfd; git clean -fd; pnpm i && pnpm build",
+    "lint": "pnpm lint:scripts && pnpm lint:formatting",
+    "lint:fix": "pnpm lint:scripts --fix && pnpm format",
+    "format": "prettier --write .",
+    "lint:scripts": "pnpm eslint --cache .",
+    "lint:formatting": "pnpm prettier --check .",
+    "test": "pnpm --filter '*' run test",
+    "test:typecheck": "pnpm --filter '*' run test:typecheck",
     "build": "tsc --build",
-    "release-it": "echo \"Running release-it via yarn breaks publishing! Use npx or a Volta global installation.\""
+    "sync": "echo 'Syncing injected peer dependencies (via built in pnpm behavior defined in .npmrc)'",
+    "release-it": "echo \"Running release-it via pnpm breaks publishing! Use npx or a Volta global installation.\""
   },
   "volta": {
     "node": "18.20.3",
-    "yarn": "1.22.4"
+    "pnpm": "10.6.2"
   },
+  "packageManager": "pnpm@10.6.2",
   "devDependencies:notes": {
     "typescript": "bumped version because volar caused error TS2694, TS1383"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "webpack",
+        "ember-auto-import",
+        "@babel/core",
+        "rsvp"
+      ]
+    }
   },
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@release-it-plugins/workspaces": "^3.2.0",
-    "@types/babel__traverse": "^7.18.2",
-    "@types/yargs": "^17.0.10",
+    "@glimmer/component": "^2.0.0",
+    "@glint/tsserver-plugin": "workspace:*",
+    "glint-monorepo-test-utils": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "@types/rsvp": "^4.0.9",
-    "ember-source": "~6.2.0",
     "eslint": "^8.27.0",
     "prettier": "^3.3.2",
     "release-it": "^15.5.0",
@@ -48,11 +61,6 @@
     "@glimmer/validator": "Newer versions of @glimmer/* are ESM-only, and Glint is compiled to CJS, so newer versions of @glimmer/* are not compatible",
     "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373",
     "@types/node": "Locking to avoid conflicts between the declared version in packages/core and floating '*' versions when we run in CI without the lockfile"
-  },
-  "resolutions": {
-    "@types/yargs": "17.0.13",
-    "@types/node": "^20.10.6",
-    "ember-cli-htmlbars": "^6.0.1"
   },
   "version": "1.4.0"
 }
