now running into environment stuff

--- a/packages/vscode/.vscodeignore
+++ b/packages/vscode/.vscodeignore
@@ -18,5 +18,6 @@ tsconfig.tsbuildinfo
 
 node_modules/**/
 !node_modules/glint-tsserver-plugin-pack.js
+!node_modules/glint-core-pack.js
 
 scripts/
