note hack failure, declare handlebars as ts plugin lang

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -164,7 +164,8 @@
         "enableForWorkspaceTypeScriptVersions": true,
         "languages": [
           "glimmer-ts",
-          "glimmer-js"
+          "glimmer-js",
+          "handlebars"
         ]
       }
     ],
