--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,27 +37,8 @@
         "${workspaceFolder}/test-packages"
       ]
     },
-    // {
-    //   "name": "Debug Extension (Glint Only, No TS, Disable Ember LS)",
-    //   "type": "extensionHost",
-    //   "request": "launch",
-    //   "preLaunchTask": "npm: build",
-    //   "autoAttachChildProcesses": true,
-    //   "runtimeExecutable": "${execPath}",
-    //   "outFiles": [
-    //     "${workspaceFolder}/**/*.js",
-    //     "!**/node_modules/**"
-    //   ],
-    //   "args": [
-    //     "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
-    //     "--disable-extensions", // uncomment to activate your local extensions
-    //     "--disable-extension",
-    //     "vscode.typescript-language-features",
-    //     "${workspaceFolder}/test-packages"
-    //   ]
-    // },
     {
-      // For this to work, make sure you're runninc `tsc --build --watch` at the root, AND
+      // For this to work, make sure you're running `tsc --build --watch` at the root, AND
       // `pnpm bundle:watch` from within vscode directory.
       "name": "Debug Extension (TS Plugin, .gts)",
       "type": "extensionHost",
@@ -76,7 +57,7 @@
       ]
     },
     {
-      // For this to work, make sure you're runninc `tsc --build --watch` at the root, AND
+      // For this to work, make sure you're running `tsc --build --watch` at the root, AND
       // `pnpm bundle:watch` from within vscode directory.
       "name": "Debug Extension (TS Plugin, ember-app-loose-and-gts)",
       "type": "extensionHost",
