Tell release-plan not to publish the vscode extension

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -41,6 +41,9 @@
   "engines": {
     "vscode": "^1.68.1"
   },
+  "release-plan": {
+    "skipNpmPublish": true
+  },
   "activationEvents": [],
   "contributes": {
     "languages": [
