add validation & completions for html attributes

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,9 @@
     "prefer-const": "off",
     "require-yield": "off"
   },
+  "env": {
+    "es6": true
+  },
   "overrides": [
     {
       "files": ["*.js", "*.cjs", "*.mjs"],
