--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -29,7 +29,12 @@
     "expect-type": "^0.15.0",
     "sums-up": "^2.1.0",
     "ember-source": "^6.2.0",
-    "typescript": ">=5.6.0"
+    "typescript": ">=5.6.0",
+    "aria-attributes": "^2.0.1",
+    "html-element-attributes": "^3.3.0",
+    "html-event-attributes": "^2.2.0",
+    "svg-element-attributes": "^2.1.0",
+    "svg-event-attributes": "^2.0.2"
   },
   "publishConfig": {
     "access": "public"
