Refrain creating ember-loose virtual code in non ember-loose environment

--- a/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../../tsconfig.compileroptions.json",
   "glint": {
-    "environment": ["ember-loose", "ember-template-imports"]
+    "environment": ["ember-template-imports"]
   },
   "compilerOptions": {
     "baseUrl": "."
