--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,26 +32,18 @@ jobs:
       - run: pnpm lint
       - uses: wyvox/action-setup-pnpm@v3
 
-
-
-  # tracking for re-enablement here: https://github.com/typed-ember/glint/issues/728
-  # type-tests:
-  #   name: "Type Tests"
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 18
-  #         cache: pnpm
-
-  #     - uses: pnpm/action-setup@v2
-  #       with:
-  #         version: 10.6.2
-  #         run_install: true
-  #     - run: "pnpm build"
-  #     - run: "pnpm --filter '*' run test:typecheck"
-  #     - run: "pnpm --filter '*' run test:tsc"
+  type-tests:
+    name: "Type Tests"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v4
+        with:
+          cache: pnpm
+      - run: pnpm reset
+      - run: "pnpm --filter '*' run test:typecheck"
+      - run: "pnpm --filter '*' run test:tsc"
 
   test:
     name: Test
