--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "@glimmer/component": "^1.1.2",
     "expect-type": "^0.15.0",
-    "sums-up": "^2.1.0"
+    "sums-up": "^2.1.0",
+    "ember-source": "^6.2.0",
+    "typescript": ">=5.6.0"
   },
   "publishConfig": {
     "access": "public"
