--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build": "tsc --build",
     "build:watch": "tsc --build --watch",
     "format": "prettier --write .",
+    "link:build": "node ./bin/link-build.mjs",
+    "link:install": "node ./bin/link-install.mjs",
     "lint": "pnpm lint:scripts && pnpm lint:formatting",
     "lint:fix": "pnpm lint:scripts --fix && pnpm format",
     "lint:formatting": "pnpm prettier --check .",
@@ -60,5 +62,12 @@
     "@glimmer/validator": "Newer versions of @glimmer/* are ESM-only, and Glint is compiled to CJS, so newer versions of @glimmer/* are not compatible",
     "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373",
     "@types/node": "Locking to avoid conflicts between the declared version in packages/core and floating '*' versions when we run in CI without the lockfile"
+  },
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "execa": "^9.5.2",
+    "mkdirp": "^3.0.1",
+    "rimraf": "^6.0.1",
+    "tar": "^7.4.3"
   }
 }
