--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -30,8 +30,8 @@
   ],
   "peerDependencies": {
     "@glimmer/component": ">=1.1.2",
-    "@glint/core": "workspace:*",
-    "@glint/template": "workspace:*",
+    "@glint/core": "*",
+    "@glint/template": "*",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-modifier": "^3.2.7 || ^4.0.0"
   },
