--- a/package.json
+++ b/package.json
@@ -30,12 +30,18 @@
     "test:typecheck": "pnpm --filter '*' run test:typecheck"
   },
   "devDependencies": {
+    "chalk": "^5.4.1",
+    "execa": "^9.5.2",
+    "mkdirp": "^3.0.1",
+    "rimraf": "^6.0.1",
+    "tar": "^7.4.3",
     "@glimmer/component": "^2.0.0",
     "@glint/tsserver-plugin": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "glint-monorepo-test-utils": "workspace:*",
+    "glob": "^10.2.4",
     "prettier": "^3.3.2",
     "release-plan": "^0.16.0",
     "typescript": ">=5.6.0"
@@ -62,12 +68,5 @@
     "@glimmer/validator": "Newer versions of @glimmer/* are ESM-only, and Glint is compiled to CJS, so newer versions of @glimmer/* are not compatible",
     "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373",
     "@types/node": "Locking to avoid conflicts between the declared version in packages/core and floating '*' versions when we run in CI without the lockfile"
-  },
-  "dependencies": {
-    "chalk": "^5.4.1",
-    "execa": "^9.5.2",
-    "mkdirp": "^3.0.1",
-    "rimraf": "^6.0.1",
-    "tar": "^7.4.3"
   }
 }
