--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -20,7 +20,7 @@
 
     // new
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
 
     "types": []
   }
