--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,6 +54,7 @@
     "silent-error": "^1.1.1",
     "uuid": "^8.3.2",
     "volar-service-typescript": "volar-2.4",
+    "volar-service-html": "volar-2.4",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
