GJS appears to be working

--- a/packages/vscode/__fixtures__/ember-app-loose-and-gts/tsconfig.json
+++ b/packages/vscode/__fixtures__/ember-app-loose-and-gts/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es2019",
     "module": "es2015",
     "moduleResolution": "bundler",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "checkJs": true
   },
   "glint": {
     "environment": ["ember-loose", "ember-template-imports"]
