--- a/package.json
+++ b/package.json
@@ -20,25 +20,27 @@
     "test:typecheck": "pnpm --filter '*' run test:typecheck"
   },
   "devDependencies": {
-    "chalk": "^5.4.1",
-    "execa": "^9.5.2",
-    "mkdirp": "^3.0.1",
-    "rimraf": "^6.0.1",
+    "@babel/core": "^7.26.10",
+    "@babel/parser": "^7.27.0",
     "@glimmer/component": "^2.0.0",
     "@glint/tsserver-plugin": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "aria-attributes": "^2.0.1",
+    "chalk": "^5.4.1",
     "eslint": "^8.27.0",
+    "execa": "^9.5.2",
     "glint-monorepo-test-utils": "workspace:*",
     "glob": "^10.2.4",
-    "prettier": "^3.3.2",
-    "release-plan": "^0.16.0",
-    "typescript": ">=5.6.0",
-    "aria-attributes": "^2.0.1",
     "html-element-attributes": "^3.3.0",
     "html-event-attributes": "^2.2.0",
+    "mkdirp": "^3.0.1",
+    "prettier": "^3.3.2",
+    "release-plan": "^0.16.0",
+    "rimraf": "^6.0.1",
     "svg-element-attributes": "^2.1.0",
-    "svg-event-attributes": "^2.0.2"
+    "svg-event-attributes": "^2.0.2",
+    "typescript": ">=5.6.0"
   },
   "packageManager": "pnpm@10.6.2",
   "volta": {
