VSCode: Add activationEvents for glimmer-ts/js file types (#895)

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -44,7 +44,10 @@
   "release-plan": {
     "skipNpmPublish": true
   },
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:glimmer-js",
+    "onLanguage:glimmer-ts"
+  ],
   "contributes": {
     "languages": [
       {
