--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glint",
-  "version": "1.4.0",
+  "version": "0.0.0",
   "private": true,
   "repository": "https://github.com/typed-ember/glint",
   "scripts": {
@@ -43,6 +43,15 @@
     "typescript": ">=5.6.0"
   },
   "packageManager": "pnpm@10.6.2",
+  "release-plan": {
+    "semverIncrementAs": {
+      "major": "prerelease",
+      "minor": "prerelease",
+      "patch": "prerelease"
+    },
+    "semverIncrementTag": "alpha",
+    "publishTag": "alpha"
+  },
   "volta": {
     "node": "18.20.3",
     "pnpm": "10.6.2"
