--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glint/tsserver-plugin",
-  "version": "1.4.0",
+  "version": "2.0.0-alpha.0",
   "type": "commonjs",
   "repository": "typed-ember/glint",
   "description": "TypeScript Server Plugin for Glint",
