--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -36,6 +36,15 @@
     "svg-element-attributes": "^2.1.0",
     "svg-event-attributes": "^2.0.2"
   },
+  "release-plan": {
+    "semverIncrementAs": {
+      "major": "preminor",
+      "minor": "prerelease",
+      "patch": "prerelease"
+    },
+    "semverIncrementTag": "alpha",
+    "publishTag": "alpha"
+  },
   "publishConfig": {
     "access": "public"
   }
