--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -58,6 +58,7 @@
     "@glint/template": "workspace:*",
     "@types/node": "^22.13.11",
     "ember-modifier": "^3.2.7 || ^4.0.0",
+    "ember-source": "^6.2.0",
     "expect-type": "^1.2.1",
     "typescript": ">=5.6.0",
     "vitest": "~3.0.9"
