add a few more dependencies

--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -56,7 +56,9 @@
     "@glimmer/component": "^1.1.2",
     "@glint/core": "workspace:*",
     "@glint/template": "workspace:*",
+    "@glint/type-test": "workspace:*",
     "@types/node": "^22.13.11",
+    "ember-cli-htmlbars": "^6.0.1",
     "ember-modifier": "^3.2.7 || ^4.0.0",
     "ember-source": "^6.2.0",
     "expect-type": "^1.2.1",
