--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -41,15 +41,21 @@
     "content-tag": "^3.1.2"
   },
   "peerDependencies": {
+    "@glimmer/component": ">=1.1.2",
     "@glint/core": "*",
-    "@glint/template": "*"
+    "@glint/template": "*",
+    "ember-modifier": "^3.2.7 || ^4.0.0"
   },
   "devDependencies": {
     "@glint/core": "workspace:*",
     "@glint/template": "workspace:*",
+    "@glint/type-test": "workspace:*",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^18.19.81",
     "common-tags": "^1.8.0",
+    "ember-cli-htmlbars": "^6.0.1",
+    "ember-source": "^6.2.0",
+    "expect-type": "^1.2.1",
     "typescript": ">=5.6.0",
     "vitest": "~3.0.9"
   },
