--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "test": "vitest run",
-    "test:typecheck": "echo 'no standalone typecheck within this project'",
+    "test:typecheck": "glint --project __tests__/type-tests",
     "test:tsc": "echo 'no standalone typecheck within this project'",
     "test:watch": "vitest watch",
     "build": "tsc --build",
