--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -46,6 +46,11 @@
     "@glint/template": "*",
     "ember-modifier": "^3.2.7 || ^4.0.0"
   },
+  "peerDependenciesMeta": {
+    "ember-modifier": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@glint/core": "workspace:*",
     "@glint/template": "workspace:*",
@@ -54,6 +59,7 @@
     "@types/node": "^18.19.81",
     "common-tags": "^1.8.0",
     "ember-cli-htmlbars": "^6.0.1",
+    "ember-modifier": "^3.2.7 || ^4.0.0",
     "ember-source": "^6.2.0",
     "expect-type": "^1.2.1",
     "typescript": ">=5.6.0",
