--- a/packages/environment-ember-template-imports/tsconfig.json
+++ b/packages/environment-ember-template-imports/tsconfig.json
@@ -4,8 +4,5 @@
   "compilerOptions": {
     "types": ["@types/node"]
   },
-  "references": [
-    { "path": "../core" },
-    { "path": "../template" }
-  ]
+  "references": [{ "path": "../core" }, { "path": "../template" }]
 }
