starting to get more sensible errors

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "lib",
     "types": ["@types/node"]
   },
-  "include": ["src", "types"]
+  "include": ["src", "types"],
+  "references": [{ "path": "../template" }]
 }
