--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,10 +17,25 @@
     },
     "./bin/*": "./bin/*.js",
     "./globals": "./types/globals/index.d.ts",
-    "./-private/dsl": "./types/-private/dsl/index.d.ts",
-    "./-private/intrinsics/*": "./types/-private/intrinsics/*",
-    "./-private/*": "./types/-private/*",
+    "./-private/dsl": {
+      "types": "./types/-private/dsl/index.d.ts",
+      "default": "./types/-private/dsl/index.d.ts"
+    },
+    "./-private/dsl/integration-declarations": "./types/-private/dsl/integration-declarations.d.ts",
+    "./-private/dsl/globals": "./types/-private/dsl/globals.d.ts",
+    "./-private/intrinsics/action": "./types/-private/intrinsics/action.d.ts",
+    "./-private/intrinsics/concat": "./types/-private/intrinsics/concat.d.ts",
+    "./-private/intrinsics/each": "./types/-private/intrinsics/each.d.ts",
+    "./-private/intrinsics/each-in": "./types/-private/intrinsics/each-in.d.ts",
+    "./-private/intrinsics/fn": "./types/-private/intrinsics/fn.d.ts",
+    "./-private/intrinsics/get": "./types/-private/intrinsics/get.d.ts",
+    "./-private/intrinsics/log": "./types/-private/intrinsics/log.d.ts",
+    "./-private/intrinsics/mount": "./types/-private/intrinsics/mount.d.ts",
     "./-private/intrinsics/mut": "./types/-private/intrinsics/mut.d.ts",
+    "./-private/intrinsics/on": "./types/-private/intrinsics/on.d.ts",
+    "./-private/intrinsics/outlet": "./types/-private/intrinsics/outlet.d.ts",
+    "./-private/intrinsics/unbound": "./types/-private/intrinsics/unbound.d.ts",
+    "./-private/intrinsics/unique-id": "./types/-private/intrinsics/unique-id.d.ts",
     "./*": {
       "types": "./lib/*.d.ts",
       "default": "./lib/*.js"
@@ -30,7 +45,8 @@
     "README.md",
     "lib",
     "bin",
-    "src"
+    "src",
+    "types"
   ],
   "bin": {
     "glint": "bin/glint.js",
