--- a/packages/vscode/.vscodeignore
+++ b/packages/vscode/.vscodeignore
@@ -19,5 +19,6 @@ tsconfig.tsbuildinfo
 node_modules/**/
 !node_modules/glint-tsserver-plugin-pack/index.js
 !node_modules/glint-core-pack/index.js
+!node_modules/glint-core-pack/content_tag_bg.wasm
 
 scripts/
