Fix mapping issue with block paramas

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,7 +70,7 @@
     "typescript": ">=5.6.0"
   },
   "dependencies": {
-    "@glimmer/syntax": "*",
+    "@glimmer/syntax": ">= 0.95.0",
     "@glint/template": "workspace:*",
     "@volar/kit": "2.4.23",
     "@volar/language-core": "2.4.23",
