--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,6 +57,15 @@
     "dev": "tsc --watch",
     "prepack": "pnpm build"
   },
+  "release-plan": {
+    "semverIncrementAs": {
+      "major": "prerelease",
+      "minor": "prerelease",
+      "patch": "prerelease"
+    },
+    "semverIncrementTag": "alpha",
+    "publishTag": "alpha"
+  },
   "peerDependencies": {
     "typescript": ">=5.6.0"
   },
