--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/typed-ember/glint",
   "scripts": {
     "build": "tsc --build",
-    "build:vscode": "pnpm --filter '@glint/core' --filter '@glint/tsserver-plugin' build && pnpm --filter 'glint-vscode' build",
+    "build:vscode": "pnpm --filter '@glint/ember-tsc' --filter '@glint/tsserver-plugin' build && pnpm --filter 'glint-vscode' build",
     "build:watch": "tsc --build --watch",
     "format": "prettier --write .",
     "link:build": "node ./bin/link-build.mjs",
