--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@glint/core",
-  "version": "2.0.0-alpha.12",
+  "name": "@glint/ember-tsc",
+  "version": "1.0.0-alpha.1",
   "repository": "typed-ember/glint",
   "description": "A CLI for performing typechecking on Glimmer templates",
   "license": "MIT",
@@ -49,7 +49,7 @@
     "types"
   ],
   "bin": {
-    "glint": "bin/glint.js",
+    "ember-tsc": "bin/ember-tsc.js",
     "glint-language-server": "bin/glint-language-server.js"
   },
   "scripts": {
