--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,20 +24,48 @@
       "default": "./types/-private/dsl/index.d.ts"
     },
     "./types": "./types/-private/dsl/integration-declarations.d.ts",
-    "./-private/dsl/globals": { "types": "./types/-private/dsl/globals.d.ts" },
-    "./-private/intrinsics/action": { "types": "./types/-private/intrinsics/action.d.ts" },
-    "./-private/intrinsics/concat": { "types": "./types/-private/intrinsics/concat.d.ts" },
-    "./-private/intrinsics/each": { "types": "./types/-private/intrinsics/each.d.ts" },
-    "./-private/intrinsics/each-in": { "types": "./types/-private/intrinsics/each-in.d.ts" },
-    "./-private/intrinsics/fn": { "types": "./types/-private/intrinsics/fn.d.ts" },
-    "./-private/intrinsics/get": { "types": "./types/-private/intrinsics/get.d.ts" },
-    "./-private/intrinsics/log": { "types": "./types/-private/intrinsics/log.d.ts" },
-    "./-private/intrinsics/mount": { "types": "./types/-private/intrinsics/mount.d.ts" },
-    "./-private/intrinsics/mut": { "types": "./types/-private/intrinsics/mut.d.ts" },
-    "./-private/intrinsics/on": { "types": "./types/-private/intrinsics/on.d.ts" },
-    "./-private/intrinsics/outlet": { "types": "./types/-private/intrinsics/outlet.d.ts" },
-    "./-private/intrinsics/unbound": { "types": "./types/-private/intrinsics/unbound.d.ts" },
-    "./-private/intrinsics/unique-id": { "types": "./types/-private/intrinsics/unique-id.d.ts" },
+    "./-private/dsl/globals": {
+      "types": "./types/-private/dsl/globals.d.ts"
+    },
+    "./-private/intrinsics/action": {
+      "types": "./types/-private/intrinsics/action.d.ts"
+    },
+    "./-private/intrinsics/concat": {
+      "types": "./types/-private/intrinsics/concat.d.ts"
+    },
+    "./-private/intrinsics/each": {
+      "types": "./types/-private/intrinsics/each.d.ts"
+    },
+    "./-private/intrinsics/each-in": {
+      "types": "./types/-private/intrinsics/each-in.d.ts"
+    },
+    "./-private/intrinsics/fn": {
+      "types": "./types/-private/intrinsics/fn.d.ts"
+    },
+    "./-private/intrinsics/get": {
+      "types": "./types/-private/intrinsics/get.d.ts"
+    },
+    "./-private/intrinsics/log": {
+      "types": "./types/-private/intrinsics/log.d.ts"
+    },
+    "./-private/intrinsics/mount": {
+      "types": "./types/-private/intrinsics/mount.d.ts"
+    },
+    "./-private/intrinsics/mut": {
+      "types": "./types/-private/intrinsics/mut.d.ts"
+    },
+    "./-private/intrinsics/on": {
+      "types": "./types/-private/intrinsics/on.d.ts"
+    },
+    "./-private/intrinsics/outlet": {
+      "types": "./types/-private/intrinsics/outlet.d.ts"
+    },
+    "./-private/intrinsics/unbound": {
+      "types": "./types/-private/intrinsics/unbound.d.ts"
+    },
+    "./-private/intrinsics/unique-id": {
+      "types": "./types/-private/intrinsics/unique-id.d.ts"
+    },
     "./*": {
       "types": "./lib/*.d.ts",
       "default": "./lib/*.js"
