--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,17 @@ on:
       - main
     # always run CI for tags
     tags:
-      - '*'
+      - "*"
 
   # early issue detection: run CI weekly on Sundays
   schedule:
-    - cron: '0 6 * * 0'
+    - cron: "0 6 * * 0"
 
 env:
   CI: true
 
 jobs:
-  lint: 
+  lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +27,7 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
-          cache: 'pnpm'
+          cache: "pnpm"
       - run: pnpm install
       - run: pnpm lint
       - uses: wyvox/action-setup-pnpm@v3
@@ -53,14 +53,24 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
-          cache: 'pnpm'
+          cache: "pnpm"
       - run: pnpm reset
       - name: Run Tests
         uses: coactions/setup-xvfb@v1
         with:
           run: pnpm test
-      - uses: wyvox/action-setup-pnpm@v3
 
+  declaration_test:
+    name: Declaration Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v4
+        with:
+          cache: "pnpm"
+      - run: pnpm reset
+      - run: pnpm --filter '*' test:build
 
   # The Windows runner can be super flaky both with Yarn installs and
   # when launching browser tests, so we allow for retries in those steps.
